postasa: Use correct printf-format string for goffset-value

Fixes compiler warnings for 32bit targets.

https://bugzilla.gnome.org/show_bug.cgi?id=654302